common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ronin-ingress
  namespace: ronin-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: ronin.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ronin-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ronin-frontend
                port:
                  number: 80
